--- a/Chart_in_Core/Chart_in_Core/Chart_in_Core.csproj
+++ b/Chart_in_Core/Chart_in_Core/Chart_in_Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Home\Details.cshtml" />
     <Content Remove="Views\Shared\Error.cshtml" />
   </ItemGroup>
 
